--- a/css/style.css
+++ b/css/style.css
@@ -13,8 +13,10 @@ html {
 body {
   font-family: system-ui, -apple-system, Segoe UI, Roboto, Arial, sans-serif;
   line-height: 1.6;
-  color: #111;
+  color: #080707;
   background: #f6f7fb;
+  padding-bottom: 60px; /* match footer height */
+
 
   /* Sticky footer setup */
   min-height: 100vh;
@@ -90,7 +92,7 @@ header {
 .menu-btn {
   display: none;
   border: 1px solid #e7e7ee;
-  background: #fff;
+  background: #f1e8e8;
   padding: 10px 12px;
   border-radius: 12px;
   cursor: pointer;
@@ -279,18 +281,33 @@ button:hover {
 }
 
 /* ====== Footer ====== */
-footer {
-  margin-top: 40px;
-  padding: 18px 0;
-  border-top: 1px solid #e7e7ee;
-  background: #fff;
-  color: #444;
+
+.footer {
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+
+  background-color: #f4f1f1;
+  color: rgb(8, 8, 8);
+  padding: 12px 20px;
+
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 
-footer p {
-  margin: 0;
-  font-size: 14px;
+.linkedin {
+  color: #0a66c2; /* LinkedIn blue */
+  text-decoration: none;
+  font-weight: 500;
 }
+
+.linkedin:hover {
+  text-decoration: underline;
+}
+
+
 
 /* ====== Responsive ====== */
 @media (max-width: 900px) {
